updated css (fixed the menu spacing on 980)

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -181,8 +181,9 @@ ul li {
         // font-size: 15px;
         // text-transform: uppercase;
         @media screen and (max-width: 1340px) {
-           font-size: 12px;
+           //font-size: 12px;
            padding: 0;
+           margin: 0 4px;
           }
     }
     &.first{
